--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+body {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background-color: #282c34;
+  color: #ffffff;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  flex-direction: column; /* Cambiado a columna para que el contenido se apile verticalmente */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#drum-machine {
+  background-color: #3b3f45;
+  border: 4px solid #4CAF50;
+  border-radius: 12px;
+  padding: 20px;
+  width: 350px;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  flex-grow: 1; /* Permite que el contenido se expanda para llenar el espacio disponible */
+  margin-bottom: 60px; /* Espacio para el footer */
 }
+
+#display {
+  background-color: #4CAF50;
+  padding: 15px;
+  border-radius: 6px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.pads-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
+.drum-pad {
+  background-color: #61dafb;
+  border: 2px solid #4CAF50;
+  border-radius: 8px;
+  padding: 20px;
+  cursor: pointer;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.5rem;
+  transition: background 0.2s ease;
+}
+
+.drum-pad:hover,
+.drum-pad:active {
+  background-color: #4CAF50;
+  color: #ffffff;
+}
+
+.clip {
+  display: none;
+}
+
+.footer {
+  text-align: center;
+  padding: 10px 0;
+  background-color: #333;
+  color: #fff;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  font-size: 14px;
+}
+
